add `jar` file and add arguments sample to `README.md`