@@ -1,1 +1,6 @@
 [![Review Assignment Due Date](https://classroom.github.com/assets/deadline-readme-button-22041afd0340ce965d47ae6ef1cefeee28c7c493a6346c4f15d667ab976d596c.svg)](https://classroom.github.com/a/K1OzvFzO)
+
+## JavaFX VM argument
+```bash
+java -jar --module-path /Users/puroid/eclipse/javafx-sdk-21.0.5/lib --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web
+```
